--- a/Translations/German/ModInfo.xml
+++ b/Translations/German/ModInfo.xml
@@ -1,6 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0"?>
 <ModInfo xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <description>Deutsche Übersetzung</description>
+  <modpicture>1920px-Flag_of_Germany.svg.png</modpicture>
+  <author>Revan/ShadowDuke</author>
+  <modioID>143281</modioID>
+  <modioFileID>0</modioFileID>
+  <modversion>for 0.1.40706</modversion>
+  <homepage>https://github.com/ShadowDuke/OW_GermanPatch</homepage>
   <singlePlayer>true</singlePlayer>
   <multiplayer>true</multiplayer>
 </ModInfo>
