--- a/Translations/German/text-helptext-change.xml
+++ b/Translations/German/text-helptext-change.xml
@@ -34,6 +34,10 @@
 		<Translation>Bestätigen</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_HELPTEXT_SAVE</zType>
+		<Translation>Speichern</Translation>
+	</Entry>
+	<Entry>	
 		<zType>TEXT_HELPTEXT_CANCEL</zType>
 		<Translation>Abbrechen</Translation>
 	</Entry>
@@ -85,10 +89,6 @@
 	<Entry>
 		<zType>TEXT_HELPTEXT_ENTRY_COLON_SPACE_TWO</zType>
 		<Translation>{0}: {1}</Translation>
-	</Entry>
-	<Entry>
-		<zType>TEXT_HELPTEXT_ENTRY_COLON_SPACE_THREE</zType>
-		<Translation>{0}: {1} {2}</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_HELPTEXT_COMMA_DATA_TWO</zType>
@@ -1805,6 +1805,10 @@ sich in der Einheits Bewegungsreichtweite bewegen</Translation>
 		<Translation>Kritische Treffer teilen doppelten Schaden aus</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_HELPTEXT_LINK_HELP_DISTANCE_MODIFIER</zType>
+		<Translation>int(DISTANCE_MODIFIER)% pro Feld für Fernkampf Einheiten</Translation>
+	</Entry>
+	<Entry>	
 		<zType>TEXT_HELPTEXT_LINK_HELP_CULTURE_LEVEL</zType>
 		<Translation>Kultur Stufen:</Translation>
 	</Entry>
@@ -1861,6 +1865,10 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 		<Translation>The first City given to this Family.</Translation>
 	</Entry>
 	<Entry>
+		<zType>TEXT_HELPTEXT_LINK_HELP_FROM_GENERAL</zType>
+		<Translation>(Von {0_character})</Translation>
+	</Entry>
+	<Entry>	
 		<zType>TEXT_HELPTEXT_LINK_HELP_FAMILY_CITIES</zType>
 		<Translation>{0_family} Städte:</Translation>
 	</Entry>
@@ -5624,6 +5632,22 @@ Ihr könnt euch beide heilen und euere Gebiete betreten.</Translation>
 	</Entry>
 	<!--Opinon Help-->
 	<Entry>
+		<zType>TEXT_HELPTEXT_OPINION_LEADER</zType>
+		<Translation>{0_opinion}: Oberhaupt ist {1_ethnicity,1}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_OPINION_LEADER_SPOUSE</zType>
+		<Translation>{0_opinion}: Oberhaupts Ehegatte ist {1_ethnicity,1}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_OPINION_DESCENDANTS</zType>
+		<Translation>{0_opinion}: Oberhaupts Nachkommen sind {1_ethnicity,1}</Translation>
+	</Entry>
+	<Entry>
+		<zType>TEXT_HELPTEXT_OPINION_DESCENDANT_SPOUSE</zType>
+		<Translation>{0_opinion}: {1_ethnicity,1} Heirat(en) für Oberhaupts Nachkommen</Translation>
+	</Entry>
+	<Entry>	
 		<zType>TEXT_HELPTEXT_OPINION_HELP_OPINION_OF</zType>
 		<Translation>{0} Meinung von {1}: {2}</Translation>
 	</Entry>
