--- a/Translations/German/text-missionResult-change.xml
+++ b/Translations/German/text-missionResult-change.xml
@@ -228,7 +228,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSIONRESULT_CHOSEN_HEIR</zType>
-		<Translation>Erben bestimmt</Translation>
+		<Translation>Erben bestimmen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISSIONRESULT_INFILTRATE_REVEAL</zType>
